# egregore-core-jax

./: README.md  README_GEOMETRY.md  README_OPTIMIZERS.md  optimizers.py  pyproject.toml
egregore_core_jax/: __init__.py  geometry.py  math_guardrails.py  optimizers.py
