[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egregore-core-jax"
version = "0.1.0"
description = "High-performance, branchless numerical stability kernels and compiler-optimized core infrastructure for advanced JAX/XLA deep learning architectures."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

# 보안을 위해 개인 이메일 주소 노출을 차단하고 닉네임 정체성만 명시합니다.
# To ensure security, personal email addresses are hidden, and only the nickname identity is displayed.
authors = [
    {name = "PJHkorea"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "optax>=0.1.5"
]

[tool.setuptools]
packages = ["egregore_core_jax"]
